Fix main-nav font sizes on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -304,9 +304,15 @@ hr {
 
 /* Responsiveness for hero text */
 @media (max-width: 767px) {
+    .nav-heading {
+        font-size: 1rem !important;
+    }
+    
     .logo-font {
         font-size: 2rem; /* Scale down heading on mobile */
     }
+
+    
 
     .shop-now-button {
         font-size: 1rem; /* Reduce button size */
